<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/rest_category"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:entries="@array/list"
                android:spinnerMode="dialog" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rest_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rest_name_hint" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:stepSize="1.0"
                android:isIndicator="false"/>

            <TextView
                android:id="@+id/show_wholeRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whole_rate"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/food"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/drink"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/cp"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/service"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/atmspr"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RatingBar
                    android:id="@+id/ratingBar_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:stepSize="1.0" />

                <RatingBar
                    android:id="@+id/ratingBar_drink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:stepSize="1.0" />

                <RatingBar
                    android:id="@+id/ratingBar_cp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:stepSize="1.0" />

                <RatingBar
                    android:id="@+id/ratingBar_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:stepSize="1.0" />

                <RatingBar
                    android:id="@+id/ratingBar_atmosphere"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:stepSize="1.0" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rest_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rest_adrs_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/last_visit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/meamo_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/meamo_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>